--- a/00_introduction.ipynb
+++ b/00_introduction.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is python, programming is fun again\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"this is python, programming is fun again\")"
    ]
@@ -25,9 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This b.t.w is a comment\n",
     "\n",
@@ -46,9 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Art:   453, Price per unit:    59.06\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Art: %5d, Price per unit: %8.2f\"% (453, 59.058))"
    ]
@@ -72,9 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 7 7\n"
+     ]
+    }
+   ],
    "source": [
     "x = y = z = 7 # multiple assignment\n",
     "print(x, y, z)"
@@ -89,13 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set the value of x2\n",
+      "2 7\n"
+     ]
+    }
+   ],
    "source": [
     "# can set values from command line as well (rarely used)\n",
     "x = input(\"set the value of x\")\n",
-    "print(x)"
+    "print(x, y)"
    ]
   },
   {
@@ -130,20 +181,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.75\n",
+      "0.75\n",
+      "3\n",
+      "0\n",
+      "81\n",
+      "81\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
-    "#print(3 / 4)\n",
-    "#print(3.0 / 4.0)\n",
-    "#print(3 % 4)\n",
-    "#print(3 // 4)\n",
-    "#print(3**4)\n",
-    "#print(pow(3, 4))\n",
+    "print(3 / 4)   #in older versions, corresponded to //\n",
+    "print(3.0 / 4.0)\n",
+    "print(3 % 4)\n",
+    "print(3 // 4) #division between integers\n",
+    "print(3**4)   #same as pow\n",
+    "print(pow(3, 4))\n",
     "\n",
-    "x = 1\n",
+    "x = 1  #interpreted as int\n",
     "print(type(x))\n",
-    "y = 1.0\n",
+    "y = 1.0 #interpreted as float\n",
     "print(type(y))\n",
     "#a,b = int(3), int(4)\n",
     "#print(a / b)\n",
@@ -160,32 +226,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1,10): print (i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "ciao\n",
+      "2\n",
+      "ciao\n",
+      "3\n",
+      "ciao\n",
+      "4\n",
+      "ciao\n",
+      "5\n",
+      "ciao\n",
+      "6\n",
+      "ciao\n",
+      "7\n",
+      "ciao\n",
+      "8\n",
+      "ciao\n",
+      "9\n",
+      "ciao\n"
+     ]
+    }
+   ],
    "source": [
     "i = 1\n",
     "while i < 10:\n",
     "    print(i)\n",
-    "    i+=1"
+    "    i+=1\n",
+    "    print(\"ciao\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 4\n",
+      "1 5\n",
+      "2 2\n",
+      "3 7\n"
+     ]
+    }
+   ],
    "source": [
-    "for i, j in enumerate([4,5,2,7]): print(i,j)"
+    "for i, j in enumerate([4,5,2,7]): \n",
+    "    print(i,j)"
    ]
   },
   {
@@ -198,9 +318,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3208800104.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [14], line 8\u001b[0;36m\u001b[0m\n\u001b[0;31m    if a = 1: print(\"ahahah\")\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "a = 21\n",
     "if a >= 22: \n",
@@ -208,7 +337,8 @@
     "elif a >= 21:\n",
     "    print(\"elif\")\n",
     "else:\n",
-    "    print(\"else\")"
+    "    print(\"else\")\n",
+    "if a == 1: print(\"ahahah\")"
    ]
   },
   {
@@ -220,11 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "co  is not a number\n"
+     ]
+    }
+   ],
    "source": [
-    "a = 1\n",
+    "#EXCEPTIONS: if not used, the compiler will show an error, while if used the desired error message will be shown.\n",
+    "\n",
+    "a = \"co\"\n",
     "try:\n",
     "    b = a + 2\n",
     "    print (b)\n",
@@ -241,15 +381,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def my_function(a, b = 2):\n",
     "    result = a + 2 * b\n",
     "    return result\n",
     "\n",
-    "my_function(3)"
+    "my_function(3)   #use predefinite value for b\n",
+    "my_function(3,3) #specify value for b"
    ]
   },
   {
@@ -285,9 +437,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is fantastic\n"
+     ]
+    }
+   ],
    "source": [
     "x = \"awesome\"\n",
     "\n",
@@ -317,10 +477,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'B', 'F', 'G', 'd', 'x', 'c', [1, 2, 3, 'this is a string', 5.3], 3]\n"
+     ]
+    }
+   ],
    "source": [
+    "#we can put in whatever data type\n",
+    "\n",
     "a_list = [1, 2, 3, \"this is a string\", 5.3]\n",
     "b_list = [\"A\", \"B\", \"F\", \"G\", \"d\", \"x\", \"c\", a_list, 3]\n",
     "print(b_list)"
@@ -337,14 +507,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "10\n",
+      "[3, 4, 10]\n",
+      "[7, 5, 3]\n",
+      "[4, 10]\n",
+      "[3, 4, 10]\n",
+      "[4, 10]\n",
+      "[5, 10]\n"
+     ]
+    }
+   ],
    "source": [
+    "#Enumeration starts from 0. 'stop' is excluded.\n",
+    "#If 'stop' is greater than the list's dimension, it automatically stops to the list's last element\n",
+    "\n",
     "a = [7, 5, 3, 4, 10]\n",
     "print(a[0])\n",
-    "print(a[-1])\n",
-    "print(a[2:4])\n",
+    "print(a[-1]) #oooh\n",
+    "print(a[2:16])\n",
     "print(a[:3])\n",
     "print(a[3:])\n",
     "print(a[-3:])\n",
@@ -361,9 +549,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 7, 5, 3, 4, 10]\n",
+      "[0, 7, 5, 3, 4, 10, 8]\n",
+      "[8, 10, 4, 3, 5, 7, 0]\n",
+      "[0, 3, 4, 5, 7, 8, 10]\n",
+      "[0, 3, 4, 5, 7, 8]\n",
+      "[0, 4, 5, 7, 8]\n",
+      "[0, 4, 5, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "a.insert(0, 0) # position, value\n",
     "print(a)\n",
@@ -375,7 +579,7 @@
     "print(a)\n",
     "a.pop()\n",
     "print(a)\n",
-    "a.remove(3) # value\n",
+    "a.remove(3) # value. If it does not exist in the list, the compiler shows an error\n",
     "print(a)\n",
     "a.remove(a[4])\n",
     "print(a)"
@@ -390,9 +594,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
    "source": [
     "even_numbers = [x for x in range(20) if x % 2 == 0]\n",
     "print(even_numbers)"
@@ -443,9 +655,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A string of characters, with newline \n",
+      " CAPITALS, etc.\n",
+      "A string of characters, with newline \n",
+      " CAPITALS, etc.\n",
+      " We can format strings for printing 5.00\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"A string of characters, with newline \\n CAPITALS, etc.\"\n",
     "print(a)\n",
@@ -463,9 +687,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BC\n",
+      "ABC D\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"ABC DEFG\"\n",
     "print(a[1:3])\n",
@@ -474,9 +707,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc defg\n",
+      "ABC DEFG\n",
+      "4\n",
+      "ABC afg\n",
+      "ABC defg\n",
+      "ABC aaag\n",
+      "ABC cccg\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = \"ABC defg\"\n",
     "print(a.lower())\n",
@@ -510,9 +767,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(a)\n\u001b[0;32m----> 3\u001b[0m \u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "a = (1, 2, 3, 4)\n",
     "print(a)\n",
@@ -530,30 +806,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
    "source": [
+    "#Extension of lists, with a key assigned to each element (like maps)\n",
+    "#Elements are accessed via their key\n",
+    "\n",
     "a = {'anItem' : \"A\", 'anotherItem' : [\"a,bc\"], 3 : \"C\", 'afourthItem' : 7} # dictionary example\n",
     "print(a['anItem'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anItem A\n",
+      "anotherItem ['a,bc']\n",
+      "3 C\n",
+      "afourthItem 7\n"
+     ]
+    }
+   ],
    "source": [
     "for i in a: print(i, a[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Instructions for adding element by element\n",
+    "\n",
+    "a = {}\n",
+    "for i in range(1,4):\n",
+    "    a[i] = 2*i\n",
+    "    print(a[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keys: dict_keys(['anItem', 'anotherItem', 3, 'afourthItem'])\n",
+      "Values: dict_values(['A', ['a,bc'], 'C', 7])\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Keys:\", a.keys())\n",
     "print(\"Values:\", a.values())"
@@ -576,9 +907,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 'cherry', 'apple'}\n"
+     ]
+    }
+   ],
    "source": [
     "a = {\"apple\", 2, \"cherry\", 2}\n",
     "print(a)"
@@ -586,18 +925,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [40], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'set' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "print(a[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "cherry\n",
+      "apple\n"
+     ]
+    }
+   ],
    "source": [
     "for i in a: print(i)"
    ]
@@ -638,7 +999,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
