--- a/00_introduction.ipynb
+++ b/00_introduction.ipynb
@@ -806,14 +806,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A\n"
+      "C\n"
      ]
     }
    ],
@@ -822,7 +822,7 @@
     "#Elements are accessed via their key\n",
     "\n",
     "a = {'anItem' : \"A\", 'anotherItem' : [\"a,bc\"], 3 : \"C\", 'afourthItem' : 7} # dictionary example\n",
-    "print(a['anItem'])"
+    "print(a[3])"
    ]
   },
   {
