--- a/05ex_OSEMN.ipynb
+++ b/05ex_OSEMN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.random.random(size = (100))\n",
+    "\n",
+    "file_name = \"simple_data.txt\"\n",
+    "\n",
+    "with open(file_name, mode='w') as f:\n",
+    "    f.write(str(a))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2\\. Create a random matrix of 5x5 and then save it to a text file named \"data.txt\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat = np.random.random(size=(5,5))\n",
+    "\n",
+    "file_name = \"data.txt\"\n",
+    "\n",
+    "with open(file_name, mode='w') as f:\n",
+    "    f.write(str(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -87,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -101,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
