--- a/02_NumberRepresentation.ipynb
+++ b/02_NumberRepresentation.ipynb
@@ -71,16 +71,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary representation of 23 : 0b10111\n",
+      "Binary representation of 23 : 18\n",
+      "Hexadecimal representation of 23 : 0x17\n",
+      "Decimal representation of 0b10111 : 23\n",
+      "Decimal representation of 0x17 : 23\n"
+     ]
+    }
+   ],
    "source": [
     "# an integer in decimal representation\n",
     "a = 23\n",
     "\n",
     "# its binary representation\n",
     "a_bin = bin(a)\n",
+    "a_bin_ = 0b10010\n",
     "print('Binary representation of', a, ':', a_bin)\n",
+    "print('Binary representation of', a, ':', a_bin_)\n",
     "\n",
     "# its hexadecimal representation\n",
     "a_hex = hex(a)\n",
@@ -294,9 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.float_info(max=1.7976931348623157e+308, max_exp=1024, max_10_exp=308, min=2.2250738585072014e-308, min_exp=-1021, min_10_exp=-307, dig=15, mant_dig=53, epsilon=2.220446049250313e-16, radix=2, rounds=1)\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(sys.float_info)"
@@ -355,7 +377,7 @@
      "text": [
       "0.1 0.1\n",
       "True\n",
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -366,7 +388,7 @@
     "print (1 / 10 == 0.1)\n",
     "\n",
     "# but then watch out! Does it work for 0.3, too?\n",
-    "print (0.1 + 0.1 == 0.2)\n"
+    "print (0.1 + 0.2 == 0.3)\n"
    ]
   },
   {
@@ -468,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +499,7 @@
        "0.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +552,7 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
